--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-pimatic",
-  "version": "1.0.x",
+  "version": "1.0.0",
   "description": "Node-red node types for Pimatic",
   "license": "Apache-2.0",
   "author": {
